--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     * { margin: 0; padding: 0; box-sizing: border-box; scroll-behavior: smooth; }
     body { font-family: 'Roboto', sans-serif; line-height: 1.6; background: #f4f4f4; }
     header {
-      background: url('https://i.ibb.co/TBXbh7X7/Chat-GPT-Image-12-17-50-15-thg-4-2025.png') center/cover no-repeat;
+      background: url('https://i.ibb.co/4gm8GvLb/creative-facebook-cover-v1-m-i.jpg') center/cover no-repeat;
       height: 90vh; display: flex; align-items: center; justify-content: center;
       text-align: center; color: white; position: relative;
     }
